--- a/index.html
+++ b/index.html
@@ -690,9 +690,10 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col-lg-5 col-md-12 order-1 order-lg-0">
                         <div class="img-wrap" data-aos="fade-up" data-aos-delay="50">
-                            <img src="assets/img/office-img-1.jpg" alt="work process" class="img-fluid rounded-custom">
+                            <img src="assets/img/report.png" alt="work process" class="img-fluid rounded-custom">
                         </div>
                     </div>
+                    
                     <div class="col-lg-6 col-md-12 order-0 order-lg-1">
                         <ul class="work-process-list list-unstyled">
                             <li class="d-flex align-items-start mb-4" data-aos="fade-up" data-aos-delay="50">
